# spotify-crawler

./: .gitignore  Cargo.toml  config.yml  config.yml.example  dev.sh  dockerfile
src/: cmd.rs  config.rs  main.rs
src/client/: spotify.rs
src/dto/: mod.rs  new_release.rs
src/job/: crawl_genre_seeds.rs  crawl_new_release.rs  mod.rs
src/storage/: es.rs
