[package]
name = "spotify-crawler"
version = "0.1.0"
authors = ["Wendell Liu <cuk.bas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
base64 = "0.13.0"
